# HyperSense

./: .gitignore  README.md  index.js
ai_engine/: .gitignore  README.md  pyproject.toml
ai_engine/apps/: configuration.py
ai_engine/apps/m2_processing_node/: README.md  frame_processor.py  mediamtx.yml  pyproject.toml
ai_engine/apps/m3_webrtc/: README.md  config.yml  gstreamer.py  mediamtx.yml  pyproject.toml  server.py  stream_ingest.py  test-client.html
ai_engine/pkgs/configuration/: __init__.py  pyproject.toml
ai_engine/pkgs/shared/: pyproject.toml
ai_engine/tools/: README.md
backend/apps/m2_processing_node/: frame_processor.py
backend/apps/m3_webrtc/: config.yaml  gstreamer.py  pyproject.toml  server.py  stream_ingest.py
client_app/: Cargo.toml
control_server/: README.md  index.ts  package.json
core/: CMakeLists.txt
core/plugins/: libface_detection.dylib  libkalman_filter.dylib  liboptical_flow.dylib  subscription
core/plugins_src/: kalman_filter.cpp  optical_flow.cpp
core/src/: feature_manager.cpp  main.cpp
core/src/include/: plugin_loader.h
plugins/: libface_detection.dylib  libkalman_filter.dylib  liboptical_flow.dylib  subscription
plugins_src/: face_detection.cpp  optical_flow.cpp
server/: index.ts  package.json
src/: plugin_loader.cpp
src/include/: feature_manager.h
