[project]
name = "HyperSight_WebRTC"
version = "0.0.0"
authors = [{ name = "tungp99", email = "tung.cloud@outlook.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
  "aiohttp>=3.11.14",
  "aiortc>=1.11.0",
  "av>=14.2.0",
  "ffmpeg>=1.4",
  "ffmpeg-python>=0.2.0",
  "HyperSight_Configuration",
  "numpy>=2.2.4",
  "opencv-gst-rtsp-server>=0.1.4",
  "pygi>=1.0.3",
  "pygobject>=3.52.3",
  "pyyaml>=6.0.2",
  "websockets>=15.0.1",
]

[tool.uv.sources]
HyperSight_Configuration = { workspace = true }
